src/Services/AuthProvider/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-provider
  labels:
    name: auth-provider
