src/Services/AuthProvider/k8s/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth-provider
  labels:
    name: auth-provider
    environment: production
